--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-server.port = 8080
+#spring.jpa.show-sql: true
+server.port = 8989
